#if 0
#if 0
#if 0 // configure - create config.mak and config.h
#if 0
#if 0 // written by 2005 NoisyB (noisyb@gmx.net)
#if 0
#if 0
cc configure.c -o config.status && ./config.status && exit 0
gcc configure.c -o config.status && ./config.status && exit 0
g++ configure.c -o config.status && ./config.status && exit 0
egcs configure.c -o config.status && ./config.status && exit 0
#endif
#endif
#endif
#endif
#endif
#endif
#endif


#define TODO 0


st_configure_in_t configure_in[] = {
  {
    {NULL},
    {NULL},
    {NULL},
#ifdef  __MSDOS__                               // __MSDOS__ must come before __unix__,
    "MSDOS=1\n",                                 //  because DJGPP defines both
#elif   defined __unix__
#ifdef  __CYGWIN__
    "CYGWIN=1\n",
#elif   defined __FreeBSD__
    "FREEBSD=1\n",
#elif   defined __OpenBSD__
    "OPENBSD=1\n",
#elif   defined __linux__
    "LINUX=1\n",
#elif   defined __solaris__
#ifdef __sparc__
    "SOLARIS_SPARC=1\n",
#else
    "SOLARIS_I386=1\n",
#endif
#else
    "GENERIC_UNIX=1\n",
#endif
#elif   defined _WIN32
#ifdef  __MINGW32__
    "MINGW=1\n",
#else
    "WIN32=1\n",
#endif
#elif   defined __APPLE__
#if   defined __POWERPC__ || defined __ppc__
    "APPLE_PPC=1\n",
#else
    "APPLE=1\n",
#endif
#elif   defined __BEOS__
    "BEOS=1\n",
#elif   defined AMIGA
#if defined __PPC__
    "AMIGA_PPC=1\n",
#else
    "AMIGA_68K=1\n",
#endif
#else
    "\n",
#endif
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gcc", NULL},
    "CC=gcc\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"cc", NULL},
    "ifndef CC\nCC=cc\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"g++", NULL},
    "CPP=g++\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gpp", NULL},
    "ifndef CPP\nCPP=gpp\nendif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"gmake", NULL},
    NULL,
    NULL,
    "*** if make fails you may try gmake instead",
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/include", NULL},
    "includedir=/usr/local/include\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/include", NULL},
    "ifndef includedir\n"
    "includedir=/usr/include\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/lib", NULL},
    "libdir=/usr/local/lib\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/lib", NULL},
    "ifndef libdir\n"
    "libdir=/usr/lib\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {NULL},
    "DESTDIR=\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/local/bin", NULL},
    "BINDIR=/usr/local/bin\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/bin", NULL},
    "ifndef BINDIR\n"
    "BINDIR=/usr/bin\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"/usr/bin/install", NULL},
    "INSTALL=/usr/bin/install -D\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n",
    NULL,
    NULL,
    NULL
  },
  {
    {NULL},
    {NULL},
    {"install", NULL},
    "ifndef INSTALL\n"
    "INSTALL=install -D\n"
    "INSTALL_PROGRAM=${INSTALL}\n"
    "INSTALL_DATA=${INSTALL} -m 644\n"
    "endif\n",
    NULL,
    NULL,
    NULL
  },
#if 0
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define DEBUG\n",
    NULL,
    NULL
  },
#endif
#if 0
  // enable dynamic loading of library
  {
    {NULL},
    {NULL},
    {NULL},
    "DLOPEN=1",
    "#define DLOPEN\n",
    NULL,
    NULL
  },
#endif
  {
    {NULL},
    {NULL},
    {NULL},
    NULL,
    "#define USE_ANSI_COLOR\n",
    "ANSI support......................   yes",
    "ANSI support......................   no"
  },
  {
    {NULL},
    {"inttypes.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_INTTYPES_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"byteswap.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_BYTESWAP_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"stdlib.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_STDLIB_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"unistd.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_UNISTD_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"dirent.h", NULL},
    {NULL},
    NULL,
    "#define HAVE_DIRENT_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"errno.h", NULL},
    {NULL},
    NULL,  
    "#define HAVE_ERRNO_H 1\n",
    NULL,  
    NULL
  },
  {
    {NULL},
    {"math.h", NULL},
    {NULL},
    "USE_MATH=1\n"
    "LDFLAGS+=-lm\n",
    "#define HAVE_MATH_H 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"termcap.h", NULL},
    {NULL},
    "USE_TERMCAP=1\n"
    "LDFLAGS+=-ltermcap\n",
    "#define USE_TERMCAP 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"zlib.h", NULL},
    {NULL},
    "USE_ZLIB=1\n"
    "LDFLAGS+=-lz\n",
    "#define USE_ZLIB 1\n",
    NULL,
    NULL
  },
  {
    {NULL},
    {"arpa/inet.h", "netdb.h", "netinet/in.h", "sys/file.h", "sys/socket.h", NULL},
    {NULL},
    "USE_TCP=1\n",
    "#define USE_TCP 1\n",
    "Network support...................   yes",
    "Network support....................   no\n"
    "*** could not find sys/socket.h and probably other files required for\n"
    "*** network use. Please report this to the developerof this package"
  },
  {
    {NULL},
    {"linux/cdrom.h", "linux/iso_fs.h", NULL},
    {NULL},
    "USE_CDDA=1\n",
    "#ifndef  USE_CDDA\n#define USE_CDDA\n#endif  // USE_CDDA\n",
    "CDDA (Linux) support..............   yes",
    "CDDA (Linux) support..............   no"
  },
#if 0
  {
    {NULL},
    {"sundev/srreg.h", NULL},
    {NULL},
    "USE_CDDA=1\n",
    "#ifndef  USE_CDDA\n#define USE_CDDA\n#endif  // USE_CDDA\n",
    "CDDA (Sun) support................   yes",
    "CDDA (Sun) support................   no"
  },
#endif
  {
    {"libid3tag.so", NULL},
    {"id3tag.h", NULL},
    {NULL},
    "USE_ID3=1\n"
    "LDFLAGS+=-lid3tag\n",
    "#define USE_ID3\n",
    "ID3 tag v2.x support..............   yes",
    "ID3 tag v2.x support..............   no"
  },
  {
    {"libmad.so", NULL},
    {"mad.h", NULL},
    {NULL},
    "USE_MAD=1\n"
    "LDFLAGS+=-lmad\n",
    "#define USE_MAD\n",
    "MP3 (shared libmad) support.......   yes",
    "MP3 (shared libmad) support.......   no"
  },
#if 0
  // libmpeg.a from splay
  {
    {"libmpeg/libmpeg.a", NULL},
    {"libmpeg/mpegsound.h", "libmpeg/mpegsound_locals.h", NULL},
    {NULL},
    "USE_LIBMPEG=1\n"
    "LDFLAGS+=-lmpeg\n",
    "#define USE_LIBMPEG\n",
    "MP3 (static libmpeg) support......   yes",
    "MP3 (static libmpeg) support......   no\n"
    "*** splay's libmpeg must be compiled statically\n"
    "*** download/install splay (with devel packages) and\n"
    "*** put libmpeg.a, mpegsound.h and mpegsound_locals.h into ./libmpeg\n"
    "*** start again afterwards"
  },
#endif
  {
    {"libvorbis.so", "libogg.so", NULL},
    {"vorbis/vorbisfile.h", "vorbis/codec.h", "ogg/ogg.h", NULL},
    {NULL},
    "USE_OGG=1\n"
    "LDFLAGS+=-logg -lvorbis -lvorbisfile\n",
    "#define USE_OGG\n",
    "Ogg Vorbis support................   yes",
    "Ogg Vorbis support................   no"
  },
#if 0
  {
    {"libFLAC.so", NULL},
    {"FLAC/all.h", NULL},
    {NULL},
    "USE_FLAC=1\n"
    "LDFLAGS+=-lFLAC\n",
    "#define USE_FLAC\n",
    "FLAC support......................   yes",
    "FLAC support......................   no"
  },
#endif
#if 0
  {
    {"libopenal.so", NULL},
    {"AL/al.h", NULL},
    {NULL},
    "USE_AL=1\n"
    "LDFLAGS+=-lopenal\n",
    "#define USE_AL\n",
    "openal support....................   yes",
    "openal support....................   no"
  },
#endif
#if 0
  {
    {"libmac.so", NULL},
    {"mac/MACLib.h", NULL},
    {NULL},
    "USE_APE=1\n"
    "CFLAGS+=-I/usr/include/mac\n"
    "LDFLAGS+=-lmac\n",
    "#define USE_APE\n",
    "APE (libmac) support..............   yes",
    "APE (libmac) support..............   no"
  },
#endif
  {
    {"libsndfile.so", NULL},
    {"sndfile.h", NULL},
    {NULL},
    "USE_SNDFILE=1\n"
    "LDFLAGS+=-lsndfile\n",
    "#define USE_SNDFILE\n",
    "libsndfile........................   yes",
    "libsndfile........................   no"
  },
#if 0
  {
    {"libsndlib.so", NULL},
    {"sndlib.h", NULL},
    {"sndlib-config", NULL},
    "USE_SNDLIB=1\n"
    "CFLAGS+=`sndlib-config --cflags`n"
    "LDFLAGS+=`sndlib-config --libs` -lsndlib\n",
    "#define USE_SNDLIB\n",
    "libsndlib.........................   yes",
    "libsndlib.........................   no"
  },
#endif
  {
    {"libaudiofile.so", NULL},
    {"audiofile.h", "aupvlist.h", "af_vfs.h", NULL},
    {"audiofile-config", NULL},
    "USE_AUDIOFILE=1\n"
    "CFLAGS+=`audiofile-config --cflags`\n"
    "LDFLAGS+=`audiofile-config --libs`\n",
    "#define USE_AUDIOFILE\n",
    "audiofile.........................   yes",
    "audiofile.........................   no"
  },
#if 0
  {
    {"libxmp.so", NULL},
    {NULL},
    {NULL},
    "USE_XMP=1\n"
    "LDFLAGS+=-lxmp\n",
    "#define USE_XMP\n",
    "libxmp (shared)...................   yes",
    "libxmp (shared)...................   no\n"
    "*** the libxmp development seems to be stalled since 2001\n"
    "*** but it still supports a LOT tracker formats\n"
    "*** download/install xmp (with devel packages) and\n"
    "*** start again afterwards\n"
    "*** it might be necessary to create a symbolic link from\n"
    "*** the installed libxmp.so.xyz to libxmp.so"
  },
#endif
#if TODO
  {
    {"libavutil.so",
     "libavcodec.so",
     "libavformat.so", NULL},
    {"ffmpeg/avutil.h", 
     "ffmpeg/avcodec.h", 
     "ffmpeg/avformat.h", NULL},
    {NULL},
    "USE_FFMPEG=1\n"
    "LDFLAGS+=-lavutil -lavcodec -lavformat\n",
    "#define USE_FFMPEG\n",
    "ffmpeg (shared)...................   yes",
    "ffmpeg (shared)...................   no\n"
    "*** download/install ffmpeg (with devel packages) and\n"
    "*** make sure you enter './configure --enable-shared' before\n"
    "*** compilation\n"	
    "*** start again afterwards"
  },
#endif
#if 1
  {
    {"libst.a", "libmp3lame.so", NULL},
    {"st.h", NULL},
    {"libst-config", NULL},
    "USE_ST=1\n"
    "CFLAGS+=`libst-config --cflags`\n"
    "LDFLAGS+=-lst `libst-config --libs`\n",
    "#define USE_ST\n",
    "sox sound tools (static libst)....   yes",
    "sox sound tools (static libst)....   no\n"
    "*** if you installed sox from sources running\n"
    "*** \"make install-lib\" after compilation might help\n"
    "*** unfortunately libst requires also libmp3lame to\n"
    "*** be installed together with development packages\n"
    "*** Quh works, of course, without libst but having\n"
    "*** realtime audio effects, on the other side, is cool...\n"
    "*** start again afterwards"
  },
#endif
#if TODO
  {
    {"libOpenSPC.so", NULL},
    {"OpenSPC.h", NULL},
    {NULL},
    "USE_SPC=1\n"
    "LDFLAGS+=-lOpenSPC\n",
    "#define USE_SPC\n",
    "OpenSPC (shared)..................   yes",
    "OpenSPC (shared)..................   no\n"
    "*** for SPC playback support you need to doanload\n"
    "*** and compile OpenSPC, a SPC player that has its own\n"
    "*** library\n"
    "*** start again afterwards"
  },
#endif
#if 0
  {
    {"libmikmod.so", NULL},
    {"mikmod.h", NULL},
    {"libmikmod-config", NULL},
    "USE_MIKMOD=1\n"
    "CFLAGS+=`libmikmod-config --cflags`\n"
    "LDFLAGS+=`libmikmod-config --libs`\n",
    "#define USE_MIKMOD\n",
    "libmikmod (shared)................   yes",
    "libmikmod (shared)................   no"
  },
#endif
#if TODO
  {
    {"libwavpack.so", NULL},
    {"wavpack/wavpack.h", NULL},
    {NULL},
    "USE_WAVPACK=1\n"
    "LDFLAGS+=-lwavpack\n",
    "#define USE_WAVPACK\n",
    "libwavpack (shared)...............   yes",
    "libwavpack (shared)...............   no"
  },
#endif
#if TODO
  {
    {"libflite.so",
     "libflite_cmu_us_kal.so",
     "libflite_cmulex.so",
     "libflite_usenglish.so", NULL},
    {"flite/flite.h", NULL},
    {NULL},
    "USE_FESTIVAL=1\n"
    "LDFLAGS+=-lflite_cmu_us_kal -lflite_usenglish -lflite_cmulex -lflite\n",
    "#define USE_FESTIVAL\n",
    "festival (speech library).........   yes",
    "festival (speech library).........   no"
  },
  {
    {"libflite.so",
     "libflite_cmu_us_kal.so",
     "libflite_cmulex.so",
     "libflite_usenglish.so", NULL},
    {"flite/flite.h", NULL},
    {NULL},
    "ifndef  USE_FESTIVAL\n"
    "USE_FLITE=1\n"
    "LDFLAGS+=-lflite_cmu_us_kal -lflite_usenglish -lflite_cmulex -lflite\n"
    "endif\n",
    "#ifndef USE_FESTIVAL\n"
    "#define USE_FLITE\n"
    "#endif\n",
    "flite (speech library, English)...   yes",
    "flite (speech library, English)...   no"
  },
#endif
#if TODO
  {
    {"libsidplay2.so", NULL},
    {"sidplay/sidplay2.h", NULL},
    {NULL},
    "USE_SID=1\n"
    "LDFLAGS+=-lsidplay2\n",
    "#define USE_SID\n",
    "SID (shared libsidplay) support...   yes",
    "SID (shared libsidplay) support...   no"
  },
#endif
#if TODO
  {
    {"libasound.so", NULL},
    {"alsa/asoundlib.h", NULL},
    {NULL},
    "USE_ALSA=1\n"
    "LDFLAGS+=-lasound\n",
    "#define USE_ALSA\n",
    "ALSA support......................   yes",
    "ALSA support......................   no"
  },
#endif
  {
    {"libesd.so", NULL},
    {"esd.h", NULL},
    {"esd-config", NULL},
    "USE_ESD=1\n"
    "CFLAGS+=`esd-config --cflags`\n"
    "LDFLAGS+=`esd-config --libs`\n",
    "#define USE_ESD\n",
    "EsounD driver.....................   yes",
    "EsounD driver.....................   no"
  },
#if 1
  {
    {"libSDL.so", NULL},
    {"SDL/SDL.h", NULL},
    {"sdl-config", NULL},
    "USE_SDL=1\n"
    "CFLAGS+=`sdl-config --cflags`\n"
    "LDFLAGS+=`sdl-config --libs`\n",
    "#define USE_SDL\n",
    "SDL sound driver..................   yes",
    "SDL sound driver..................   no"
  },
#endif
  // linux oss
  {
    {NULL},
    {"linux/soundcard.h", NULL},
    {NULL},
    "USE_OSS=1\n",
    "#define USE_OSS\n",
    "OSS driver........................   yes",
    "OSS driver........................   no"
  },
  // libao
  {
    {"libao.so", NULL},
    {"ao/ao.h", NULL},
    {NULL},
    "USE_LIBAO=1\n"
    "LDFLAGS+=-lao\n",
    "#define USE_LIBAO\n",
    "libao sound driver................   yes",
    "libao sound driver................   no"
  },
#if TODO
  // AF audio server
  {
    {NULL},
    {"AF/AFlib.h", NULL},
    {NULL},
    "USE_AF=1\n",
    "#define USE_AF\n",
    NULL,
    NULL
  },
#endif
#if TODO
  // PC speaker (linux only?)
  {
    {NULL},
    {"sys/kd.h", "sys/ioctl.h", NULL},
    {NULL},
    "USE_PCSPKR=1\n",
    "#define USE_PCSPKR\n",
    "PC Speaker! driver................   yes",
    "PC Speaker! driver................   no\n"
    "*** you lose nothing without this driver ;-)"
  },
#endif
#if TODO
  // AIX
  {
    {NULL},
    {"sys/audio.h", NULL},
    {NULL},
    "USE_AIX=1\n",
    "#define USE_AIX\n",
    "AIX sound driver..................   yes",
    "AIX sound driver..................   no"
  },
  // HP-UX
  {
    {NULL},
    {"sys/audio.h", NULL},
    {NULL},
    "USE_HPUX=1\n",
    "#define USE_HPUX\n",
    "HPUX sound driver.................   yes",
    "HPUX sound driver.................   no"
  },
#endif
#if TODO
  // SGI
  {
    {NULL},
    {"dmedia/audio.h", NULL},
    {NULL},
    "USE_SGI=1\n",
    "#define USE_SGI\n",
    "SGI sound driver..................   yes",
    "SGI sound driver..................   no"
  },
#endif
#if TODO
  // sparc
  {
    {NULL},
    {"sys/audioio.h", NULL},
    {NULL},
    "USE_SPARC=1\n",
    "#define USE_SPARC\n",
    "SPARC sound driver................   yes",
    "SPARC sound driver................   no"
  },
#endif
  {{NULL}, {NULL}, {NULL}, NULL, NULL, NULL, NULL}
};


const char *lib_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/lib/",
  "/usr/local/lib/",
#else // DJGPP, Win32
  "c:\\windows\\system\\",
  "d:\\windows\\system\\",
  "e:\\windows\\system\\",
  "f:\\windows\\system\\",
  "g:\\windows\\system\\",
  "h:\\windows\\system\\",
  "c:\\windows\\system32\\",
  "d:\\windows\\system32\\",
  "e:\\windows\\system32\\",
  "f:\\windows\\system32\\",
  "g:\\windows\\system32\\",
  "h:\\windows\\system32\\",
#endif
  NULL
};


const char *header_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "./",
  "/usr/include/",
  "/usr/local/include/",
  "/usr/local/usr/local/include/",
#else // DJGPP, Win32
  "c:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Programme\\Microsoft Visual Studio\\vc98\\Include\\"
  "c:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "d:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "e:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "f:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "g:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
  "h:\\Program Files\\Microsoft Visual Studio\\vc98\\Include\\"
#endif
  NULL
};


const char *file_dirs[] = {
#if     (defined __unix__ && !defined __MSDOS__) || defined __BEOS__ || \
        defined AMIGA || defined __APPLE__      // Mac OS X actually
// GNU/Linux, Solaris, FreeBSD, OpenBSD, Cygwin, BeOS, Amiga, Mac (OS X)
  "",
  "./",
#else // DJGPP, Win32
  "c:\\",
  "d:\\",
  "e:\\",
  "f:\\",
  "g:\\",
  "h:\\",
#endif
  NULL
};
